fixed alignment issues

--- a/public/css/futureed-admin.css
+++ b/public/css/futureed-admin.css
@@ -65,7 +65,7 @@ div > .nav-list > li > a{
 	background-color: #f6f4f5;
 }
 .search-container{
-	padding: 0px 30px 15px 30px;
+	padding: 0px 20px 15px 20px;
 	color: #887c70;
 }
 .mid-container{
@@ -906,5 +906,18 @@ li.questions-answers > a, li.questions-answers div {
 }
 
 .col_radio_label{
-	width: 113px;
+	width: 130px;
+}
+
+.col_radio_fields {
+    width: 198px;
+}
+
+.m-top-10 {
+    margin-top: 10px !important;
+}
+
+.search-container-view{
+	padding: 0px 20px 15px 20px;
+	color: #887c70;
 }
